fix swagger of apis
